# indiestudio_bomberman

./: .gitignore  CMakeLists.txt  README.md  save default 2019-06-15 17-06-25.xml  save default 2019-06-15 17-07-18.xml  save default 2019-06-15 17-09-05.xml
cmake-dependencies/: FindIrrklang.cmake
cmake-dependencies/include/: driverChoice.h  irrAllocator.h
include/: ASoundComponent.hpp  Camera.hpp  CameraException.hpp  ComponentParticle.hpp  IrrklangAudioExceptions.hpp  IrrklangAudioSystem.hpp  IrrlichtClosingWindowEvent.hpp  IrrlichtGUIEvent.hpp  IrrlichtJoystickInputEvent.hpp  IrrlichtKeyInputEvent.hpp  IrrlichtManagerExceptions.hpp  IrrlichtManagerSystem.hpp  IrrlichtMouseInputEvent.hpp  IrrlichtParticleComponent.hpp  IrrlichtParticleSystem.hpp  IrrlichtRendererSystem.hpp  Material.hpp  Matrices.hpp  Mesh.hpp  MeshExceptions.hpp  ParticleException.hpp  Sound2DComponent.hpp  Sound3DComponent.hpp  SoundComponent.hpp  Transform.hpp  Vectors.hpp
include/ai/: AStar.hpp  AiView.hpp
include/assets_manager/: AssetsManager.hpp
include/components/: AIController.hpp  Animator.hpp  Bomb.hpp  Bombe.hpp  BonusEffector.hpp  BonusSpawner.hpp  BoxCollider.hpp  Camera.hpp  ComponentParticle.hpp  DestroyOnTime.hpp  DynamicCamera.hpp  GameManager.hpp  Hoverer.hpp  LeaderBoard.hpp  Material.hpp  Mesh.hpp  MoveToTarget.hpp  PlayerAlive.hpp  PlayerController.hpp  PointLight.hpp  Rotator.hpp  SoundComponent.hpp  Transform.hpp
include/events/: AskingForBonusSpawnEvent.hpp  AskingForSaveEvent.hpp  BombExplosionEvent.hpp  HasReachedTarget.hpp  IrrlichtAnimationEndEvent.hpp  IrrlichtClosingWindowEvent.hpp  IrrlichtControllerKeyJustChangedEvent.hpp  IrrlichtGUIEvent.hpp  IrrlichtJoystickInputEvent.hpp  IrrlichtKeyInputEvent.hpp  IrrlichtKeyJustChangedEvent.hpp  IrrlichtMouseInputEvent.hpp
include/exceptions/: AnimatorException.hpp  AssetsManagerExceptions.hpp  BombException.hpp  CameraException.hpp  ImageException.hpp  InputManagerException.hpp  IrrlichtManagerExceptions.hpp  MeshExceptions.hpp  ParserExceptions.hpp  ParticleException.hpp  SceneManagerException.hpp
include/input/: Controller.hpp  Input.hpp  InputManager.hpp
include/map/: Map.hpp  Perlin.hpp  PpmImage.hpp
include/maths/: Geometry3D.hpp  Matrices.hpp  Vectors.hpp
include/parser/: Parser.hpp
include/scenes/: ControllerConfigScene.hpp  EndScene.hpp  IScene.hpp  InvalidXmlScene.hpp  LoadSaveScene.hpp  NewGameScene.hpp  PlayerConfigScene.hpp  ResourcesPackScene.hpp  Scene.hpp  SceneManager.hpp  SplashScreenScene.hpp  StaticTestScene.hpp
include/shaders/: Shaders.hpp
include/systems/: AISystem.hpp  BombManagerSystem.hpp  BonusSystem.hpp  DestroyOnTimeSystem.hpp  IrrklangAudioSystem.hpp  (+6 more)
lib/jfecs/: CMakeLists.txt
lib/jfecs/sources/: EntityManager.cpp
resources/: systems.xml  test.xml
sources/: main.cpp
(+124 files in other folders)
